<resources>
    <string name="app_name">Loop</string>
    <string name="already_account">Already have an account?</string>
        <string name="login">Login</string>
    <string name="join_community">Join the community!</string>
        <string name="register">Register</string>
    <string name="no_network">Network connection required!</string>
    <string name="activate_network">Do you want to activate the network?</string>
    <string name="settings">Settings</string>
        <string name="themes">Themes</string>
            <string name="themes_hint">Choose the color theme of your like!</string>
            <string name="th_black">Black</string>
            <string name="th_white">White</string>
            <string name="th_grey">Grey</string>
            <string name="th_red">Red</string>
            <string name="th_green">Green</string>
            <string name="th_blue">Blue</string>
            <string name="th_purple">Purple</string>
    <string name="users">Users</string>
        <string name="me">Me</string>
        <string name="user_profile">User profile</string>
            <string name="bio">Biography</string>
            <string name="details">Details</string>
        <string name="following">Following</string>
        <string name="follow">Follow</string>
        <string name="followers">Followers</string>
        <string name="coauthors">Coauthors</string>
    <string name="articles">Articles</string>
    <string name="my_liked_articles">Liked articles</string>
    <string name="search_results">Search results</string>
    <string name="publications">Publications</string>
    <string name="publication">Publication</string>
    <string name="search">Search</string>
        <string name="search_article">Search publications</string>
        <string name="empty_field">Search field is empty!</string>
        <string name="bytitle">By title</string>
        <string name="byauthor">By author</string>
        <string name="byabstract">By abstract</string>
        <string name="bykeyword">By keyword</string>
    <string name="abstrakt">Abstract</string>
            <string name="title">Title</string>
            <string name="author">Author</string>
            <string name="authors">Authors</string>
            <string name="keyword">Keyword</string>
        <string name="keywords">Keywords</string>
        <string name="my_likes">My likes</string>
            <string name="like">Like</string>
            <string name="liked">Liked</string>
    <string name="logout">Logout</string>
    <string name="end_session">Session expired or network unavailable.\nFor security reasons, login again.</string>
</resources>
