<android.support.v4.widget.SlidingPaneLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/slidingPane"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/frame_stroke"
>
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    >
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >
            <TextView
                style="@style/SlidingMenuTitleText"
                android:text="@string/users"
            />
                <Button
                    android:id="@+id/bUsersMe"
                    android:text="@string/me"
                    style="@style/SlidingMenuButton"
                />
                <View style="@style/Separator"/>

            <TextView
                style="@style/SlidingMenuTitleText"
                android:text="@string/articles"
            />
                <Button
                    android:id="@+id/bArticlesSearch"
                    android:text="@string/search"
                    style="@style/SlidingMenuButton"
                />
                <View style="@style/Separator"/>
                <Button
                    android:id="@+id/bArticlesLikes"
                    android:text="@string/my_likes"
                    style="@style/SlidingMenuButton"
                />
                <View style="@style/Separator"/>

            <TextView
                style="@style/SlidingMenuTitleText"
                android:text="@string/settings"
            />
                <Button
                    android:id="@+id/bSettingsThemes"
                    android:text="@string/themes"
                    style="@style/SlidingMenuButton"
                />
                <View style="@style/Separator"/>
                <Button
                    android:id="@+id/bLogout"
                    android:text="@string/logout"
                    style="@style/SlidingMenuButton"
                    android:layout_marginTop="24dp"
                />
                <View style="@style/Separator"/>
        </LinearLayout>
    </ScrollView>
    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
    />
</android.support.v4.widget.SlidingPaneLayout>