<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/science_mosaic"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="6"
    >
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_gravity="center"
            android:src="@drawable/logo"
        />
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
        >
            <LinearLayout
                android:id="@+id/enterButtons"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible"
            >
                <TextView
                    style="@style/MainScreenText"
                    android:text="@string/already_account"
                />
                <Button
                    android:id="@+id/bLogin"
                    style="@style/MainScreenButton"
                    android:text="@string/login"
                />
                <TextView
                    style="@style/MainScreenText"
                    android:text="@string/join_community"
                />
                <Button
                    android:id="@+id/bRegister"
                    style="@style/MainScreenButton"
                    android:text="@string/register"
                />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</RelativeLayout>