<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
        >
            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="90dp"
                android:src="@drawable/wlogo"
            />
            <EditText
                android:id="@+id/etSearch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:paddingLeft="14dp"
                android:paddingRight="14dp"
                android:layout_marginTop="30dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:hint="@string/search_article"
                android:textColor="@android:color/white"
                android:textColorHint="@color/white_strong_transparent"
                android:background="@color/grey_light_translucent"
            />
            <Button
                android:id="@+id/bSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="14dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="32dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_gravity="center_horizontal"
                android:textSize="25dp"
                android:textColor="@android:color/white"
                android:textStyle="bold|italic"
                android:background="@drawable/button_drafted"
                android:text="@string/search"
            />
            <View android:id="@+id/s0" style="@style/HeaderDivider"/>
            <Button
                android:id="@+id/bTitle"
                style="@style/ListMenuButton"
                android:text="@string/bytitle"
                android:drawableLeft="@drawable/magnifier"
                android:background="@drawable/sliding_button_selector_back"
            />
            <View android:id="@+id/s1" style="@style/HeaderDivider"/>
            <Button
                android:id="@+id/bAbstract"
                style="@style/ListMenuButton"
                android:text="@string/byabstract"
                android:drawableLeft="@drawable/magnifier"
                android:background="@drawable/sliding_button_selector_back"
            />
            <View android:id="@+id/s2" style="@style/HeaderDivider"/>
            <Button
                android:id="@+id/bKeyword"
                style="@style/ListMenuButton"
                android:text="@string/bykeyword"
                android:drawableLeft="@drawable/magnifier"
                android:background="@drawable/sliding_button_selector_back"
            />
            <View android:id="@+id/s3" style="@style/HeaderDivider"/>
            <Button
                android:id="@+id/bAuthor"
                style="@style/ListMenuButton"
                android:text="@string/byauthor"
                android:drawableLeft="@drawable/magnifier"
                android:background="@drawable/sliding_button_selector_back"
            />
            <View android:id="@+id/s4" style="@style/HeaderDivider"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>