<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtTitleTitle"
                    android:text="@string/title"
                    android:visibility="gone"
                    style="@style/ItalicTitle"
                />
                <TextView
                    android:id="@+id/txtTitle"
                    style="@style/H3Text"
                />
            </LinearLayout>
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtAuthorsTitle"
                    android:text="@string/authors"
                    android:visibility="gone"
                    style="@style/ItalicTitle"
                />
                <airsign.views.FlowLayout
                    android:id="@+id/vAuthors"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                />
            </LinearLayout>
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtAbstractTitle"
                    android:text="@string/abstrakt"
                    style="@style/ItalicTitle"
                    android:visibility="gone"
                />
                <TextView
                    android:id="@+id/txtAbstract"
                    style="@style/H3Text"
                    android:visibility="gone"
                />
            </LinearLayout>
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtKeywordsTitle"
                    android:text="@string/keywords"
                    android:visibility="gone"
                    style="@style/ItalicTitle"
                />
                <airsign.views.FlowLayout
                    android:id="@+id/vKeywords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="left"
                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_dark_translucent"
    >
        <TextView
            android:id="@+id/bHeart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/like"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:paddingLeft="14dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/empty_heart"
            android:textColor="@android:color/white"
        />
    </RelativeLayout>
</RelativeLayout>