<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <LinearLayout
        android:id="@+id/layoutPeople"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_above="@+id/layoutBottom"
    >
        <RelativeLayout android:id="@+id/layoutTitlePeople" style="@style/InfoFrame">
            <TextView
                android:id="@+id/txtPeople"
                android:text="@string/following"
                style="@style/ItalicTitle"
            />
            <ImageButton
                android:id="@+id/imgDropdownPeople"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/dropdown"
            />
        </RelativeLayout>
        <LinearLayout
            android:id="@+id/layoutSelectionPeople"
            style="@style/InfoFrameHorizontal"
            android:paddingTop="0dp"
            android:paddingBottom="6dp"
            android:weightSum="3"
            android:visibility="gone"
        >
            <Button
                android:id="@+id/txtFollowers"
                style="@style/H4Text"
                android:layout_weight="1"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:text="@string/followers"
                android:background="@drawable/button_drafted"
            />
            <Button
                android:id="@+id/txtFollowing"
                style="@style/H4Text"
                android:layout_weight="1"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:text="@string/following"
                android:background="@drawable/button_drafted"
            />
            <Button
                android:id="@+id/txtCoauthors"
                style="@style/H4Text"
                android:layout_weight="1"
                android:textStyle="bold|italic"
                android:gravity="center"
                android:text="@string/coauthors"
                android:background="@drawable/button_drafted"
            />
        </LinearLayout>
        <View android:id="@+id/sepPeople" style="@style/HeaderDivider"/>
        <ListView
            android:id="@+id/listPeople"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@color/white_transparent"
            android:dividerHeight="1dp"
            android:listSelector="@drawable/sliding_button_selector_back"
        />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_dark_translucent"
    >
        <ImageButton style="@style/BottomButton"
            android:id="@+id/bInfo"
            android:src="@drawable/info_icon"
        />
        <ImageButton style="@style/BottomButton"
            android:id="@+id/bPeople"
            android:src="@drawable/people_icon"
            android:background="@color/grey_middle_translucent"
        />
        <ImageButton style="@style/BottomButton"
            android:id="@+id/bArticles"
            android:src="@drawable/article_icon"
        />
    </LinearLayout>
</RelativeLayout>