<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
>
    <ScrollView
        android:id="@+id/layoutUserInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
        >
            <LinearLayout style="@style/InfoFrameHorizontal">
                <ImageView
                    android:id="@+id/imgUser"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="14dp"
                    android:orientation="vertical"
                    android:layout_gravity="center_vertical"
                >
                    <TextView
                        android:id="@+id/txtName"
                        style="@style/BoldTitle"
                    />
                    <TextView
                        android:id="@+id/txtProvenance"
                        style="@style/H3Text"
                    />
                </LinearLayout>
            </LinearLayout>
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtDetails"
                    android:text="@string/details"
                    style="@style/ItalicTitle"
                    android:visibility="gone"
                />
                <TextView
                    android:id="@+id/txtDegree"
                    style="@style/H3Text"
                />
                <TextView
                    android:id="@+id/txtAffiliation"
                    style="@style/H3Text"
                />
                <TextView
                    android:id="@+id/txtJob"
                    style="@style/H3Text"
                />
            </LinearLayout>
            <LinearLayout style="@style/InfoFrame">
                <TextView
                    android:id="@+id/txtBioTitle"
                    android:text="@string/bio"
                    android:visibility="gone"
                    style="@style/ItalicTitle"
                />
                <TextView
                    android:id="@+id/txtBio"
                    style="@style/H3Text"
                />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <RelativeLayout
        android:id="@+id/layoutBottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/grey_dark_translucent"
    >
        <TextView
            android:id="@+id/bStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textStyle="bold|italic"
            android:layout_centerVertical="true"
            android:gravity="center_vertical"
            android:text="@string/follow"
            android:paddingLeft="14dp"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/empty_star"
            android:textColor="@android:color/white"
            android:visibility="invisible"
        />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:orientation="horizontal"
        >
            <ImageButton style="@style/BottomButton"
                android:id="@+id/bInfo"
                android:src="@drawable/info_icon"
                android:background="@color/grey_middle_translucent"
            />
            <ImageButton style="@style/BottomButton"
                android:id="@+id/bPeople"
                android:src="@drawable/people_icon"
            />
            <ImageButton style="@style/BottomButton"
                android:id="@+id/bArticles"
                android:src="@drawable/article_icon"
            />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>